# composer

./: .dockerignore  .gitignore  ARCHITETTURA.md  ARCHITETTURA_DEFINITIVA.md  CONTROLLO_COMPLETO.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.web  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_PLAN.md  LICENSE  PIANO_SVILUPPO.md  PIANO_UNIFICATO.md  PROFILO_INTEGRAZIONE.md  Piano_sviluppo_attuale.md  README.md  RIEPILOGO_FINALE.md  STATO_REPOSITORY.md  TODO.md  TODO_AUDIO.md  TODO_AUDIO_IMPLEMENTATION.md  TODO_COMBINED_DISPLAY.md  TODO_IMPLEMENTAZIONE.md  TODO_LIST.md  TODO_REALTIME.md  TODO_chord_diagrams.md  TODO_circle_of_fifths.md  TODO_typehints_exceptions.md  c  copy_file.py  create_midi.js  docker-compose.yml  fix.py  fix_all_blueprints.py  fix_all_bp.py  fix_analysis.py  fix_api.py  fix_blueprint_names.py  fix_blueprints.py  (+19 more)
.github/workflows/: deploy.yml  test.yml
music_engine/: .gitignore  ANALISI_E_MIGLIORAMENTI.md  CHANGELOG.md  CONTRIBUTING.md  FINALE_RIEPILOGO.md  FIX_IMPORT_ISSUE.md  INSTALL_AND_RUN.md  LICENSE  MIGLIORAMENTI_IMPLEMENTATI.md  QUICK_START.md  README.md  README_PROGETTO_COMPLETO.md  __init__.py  __main__.py  app_standalone.py  build_exe.py  check_gui.py  cli.py  create_github_repo.py  demo.py  exceptions.py  icon_readme.txt  launch.py  launch_simple.py  main_gui.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  simple_audio_test.py  simple_build.py  simple_gui.py  simple_test.py  standalone_demo.py  test_audio.py  test_basic.py  test_complete_app.py  test_fretboard.py  (+2 more)
music_engine/analysis/: advanced_analytics.py  visualization.py
music_engine/audio/: __init__.py  adapter.py  midi_renderer.py  player.py  synthesizer.py
music_engine/core/: __init__.py  arpeggios.py  chords.py  harmony.py  intervals.py  notes.py  progressions.py  scales.py
music_engine/examples/: basic_usage.py
music_engine/gui/: __init__.py  arpeggio_viewer.py  base_component.py  chord_builder.py  fretboard_viewer.py  main_window.py  preset_manager.py  progression_analyzer.py  scale_explorer.py  virtual_keyboard.py
music_engine/integrations/: __init__.py  factory.py  mingus_adapter.py  music21_adapter.py
music_engine/models/: __init__.py  arpeggio.py  chord.py  chord_shapes.py  fretboard.py  note.py  progression.py  scale.py
music_engine/orchestrator/: __init__.py  controller.py  expansion.py  genre_rules.py  solver.py
music_engine/tests/: __init__.py  test_core.py  test_integration.py  test_integration_new.py  test_models.py
music_engine/utils/: __init__.py  audio.py  constants.py  logging_config.py  music_math.py  preset_manager.py  presets.py  validators.py
static/: ads.txt
web_app/: app.py  requirements.txt
web_app/api/: __init__.py  analysis.py  analysis_new.py  analyzer.py  chords.py  circle.py  midi.py  orchestrator.py  progressions.py  scales.py  scales_fixed.py
web_app/static/css/: style.css
web_app/static/js/: animations.js  audio_manager.js  chord_diagram.js  chord_voicings.js  fretboard.js  main.js  music_utils.js
web_app/static/js/components/: index.js  virtual_keyboard.js
web_app/templates/: about.html  analyzer.html  apply_fix.py  base.html  chords.html  error.html  fretboard.html  index.html  learn.html  privacy.html  progressions.html  realtime.html  scales.html  terms.html
