[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-theory-engine"
version = "0.1.0"
description = "A comprehensive Python library and web application for music theory analysis"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
    "music21>=7.0.0",
    "mingus>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["music_engine/tests"]
pythonpath = ["."]
